[tool.poetry]
name = "evil-clippy"
version = "0.1.0"
description = ""
authors = ["Josh Pollock <jopo@mit.edu>"]
readme = "README.md"
packages = [{ include = "evil_clippy" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
