[tool.poetry]
name = "evil_clippy"
version = "0.1.0"
description = ""
authors = ["Josh Pollock <jopo@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.22.0"
hugchat = "^0.0.6.2"
streamlit-chat = "^0.0.2.2"
streamlit-extras = "^0.2.7"
langchain = "^0.0.181"
openai = "^0.27.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
